2012-12-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php: erased double check for admin user
	in action to update config.

2012-12-26  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	godmode/users/profile_list.php
	godmode/users/configure_profile.php: Added to the
	database and editor new reporting and events ACL flags

2012-12-21  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/agent_template.php,
	  godmode/agentes/configurar_agente.php,
	  godmode/agentes/module_manager.php,
	  include/functions_modules.php: Implemented a real not-init status.
	  Small fixes.

2012-12-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	include/functions_events.php: Adapt details view of events
	to metaconsole links

2012-12-21  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_module_interval.php: Translated into Japanese.

2012-12-20  Sergio Martin <sergio.martin@artica.es>

	* operation/tree.php
	operation/events/events_list.php
	operation/events/events.php
	godmode/events/event_edit_filter.php
	godmode/events/event_responses.list.php
	godmode/events/custom_events.php
	godmode/events/events.php
	godmode/events/event_filter.php
	godmode/events/event_responses.editor.php: Fix several links
	in events manager for metaconsole (things like pure parameter)

2012-12-20  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/events.php
	include/functions_events.php
	include/javascript/pandora_events.js: Adapt responses
	to metaconsole connection (retrieving of event address macro)
	and set format to tags in event view

2012-12-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Added missed translation of 